--- a/services.css
+++ b/services.css
@@ -788,6 +788,7 @@ footer {
 @media (max-width: 768px) {
   .logo-image {
     height: 35px;
+    margin-left: 0;
   }
   
   .footer-logo-image {
