--- a/testimonials.css
+++ b/testimonials.css
@@ -1059,6 +1059,7 @@
 @media (max-width: 768px) {
   .logo-image {
     height: 35px;
+    margin-left: 0;
   }
   
   .footer-logo-image {
